--- a/docs/speakeasy-reference/generation/ci-cd-pipeline.mdx
+++ b/docs/speakeasy-reference/generation/ci-cd-pipeline.mdx
@@ -59,6 +59,7 @@ jobs:
       mode: pr
       set_version: ${{ github.event.inputs.set_version }}
       speakeasy_version: latest
+      github_repository: acme-org/acme-sdk-typescript
 ```
 
 <Table 
@@ -66,7 +67,8 @@ jobs:
     { name: "speakeasy_version", description: "Version of the Speakeasy CLI to use. Use \"latest\" to always use the latest version.", type: "string", default: "latest" },
     { name: "mode", description: "Workflow mode: `direct` commits changes directly to the branch, `pr` creates a pull request, or `test` fully runs through generation without modifying any GitHub state.", type: "string", default: "direct" },
     { name: "force", description: "Forces SDK generation, even if no changes are detected.", type: "boolean", default: "false" },
-    { name: "set_version", description: "Manually set a specific version for the SDK being generated.", type: "string", default: "None" }
+    { name: "set_version", description: "Manually set a specific version for the SDK being generated.", type: "string", default: "None" },
+    { name: "github_repository", description: "The GitHub repository path (e.g., 'owner/repo-name') that package registries should reference. This overrides the default repository detected from the current Git context.", type: "string", default: "None" }
   ]}
   columns={[
     { key: "name", header: "Input Name" },
